--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-main: de.linzn.homeWebApp.HomeWebAppPlugin
-name: home-webApp
+main: de.linzn.restfulapi.RestFulApiPlugin
+name: restful-api
 version: ${project.version}
-depend: [ heating-status, local-weather, home-devices, calender, system-chain, service-status ]
+depend: [ local-weather, home-devices, calender, system-chain, service-status ]
