--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <name>restful-api</name>
     <repositories>
         <repository>
-            <id>enigmar-repo</id>
-            <url>https://repository.enigmar.de/</url>
+            <id>Stem Builds Repository</id>
+            <url>https://builds.app.stem-system.de/plugin/repository/everything/</url>
         </repository>
     </repositories>
     <build>
@@ -77,18 +77,18 @@
             </plugin>
         </plugins>
     </build>
-    <version>0.0.1</version>
+    <version>1.0-SNAPSHOT</version>
     <artifactId>restful-api</artifactId>
     <dependencies>
         <dependency>
             <groupId>de.stem</groupId>
             <artifactId>stem-system</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.stem.plugins</groupId>
             <artifactId>system-chain</artifactId>
-            <version>0.0.1</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <properties>
