--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <buildServer.jobName>CUSTOM</buildServer.jobName>
+        <buildServer.buildNumber>SNAPSHOT</buildServer.buildNumber>
     </properties>
 </project>
